fix broken CSS in Webkit

--- a/src/styles/mixins/inputs.scss
+++ b/src/styles/mixins/inputs.scss
@@ -80,7 +80,7 @@
 
   height: $height;
   width: $height;
-  margin-top: $offset;
+  // margin-top: $offset;  // not working in Webkit
   border-radius: 50%;
 }
 
